--- a/packages/theme-chalk/src/common/var.scss
+++ b/packages/theme-chalk/src/common/var.scss
@@ -46,7 +46,7 @@ $--border-color-light: #e4e7ed !default;
 $--border-color-lighter: #ebeef5 !default;
 $--border-color-extra-light: #f2f6fc !default;
 $--border-hover-color: $--color-text-placeholder !default;
-$--border-base:$--border-color-base $--border-style-base $--border-color-base !default;
+$--border-base:$--border-width-base $--border-style-base $--border-color-base !default;
 $--border-radius-base:4px !default;
 $--border-radius-samll: 2px !default;
 $--border-radius-circle: 100% !default;
@@ -89,7 +89,7 @@ $--disabled-border-base: $--border-color-light !default;
 //break points
 $--sm: 768px !default; 
 $--md: 992px !default;
-$-lg: 1200px !default;
+$--lg: 1200px !default;
 $--xl:1920px !default;
 
 $--breakpoints: (
@@ -100,13 +100,13 @@ $--breakpoints: (
   'xl':(min-width:$--xl)
 );
 $--breakpoints-spec:(
-  'xs-only': (max-width:$--sm-1),
+  'xs-only': (max-width:$--sm -1),
   'sm-and-up':(min-width:$--sm),
   'sm-only':"(min-width:#{$--sm}) and (max-width: #{$--md}-1)",
   'sm-and-down':(max-width:$--md - 1),
   'md-and-up':(min-width:$--md),
   'md-only':"(min-width:#{$--md}) and (max-width:#{$--lg}-1)",
-  'md-and-down':(max-width:$--lg-1),
+  'md-and-down':(max-width:$--lg -1),
   'lg-and-up':(min-width:$--lg),
   'lg-only':"(min-width:#{$--lg}) and (max-width:#{$--xl}-1)",
   'lg-and-down':(max-width:#{$--xl}-1),
