使用svg字体图标

--- a/packages/theme-chalk/src/common/var.scss
+++ b/packages/theme-chalk/src/common/var.scss
@@ -1,6 +1,6 @@
 //color
 $--color-white:#fff !default;
-$--color-back:#000 !default;
+$--color-black:#000 !default;
 $--color-primary: #409EFF !default;
 $--color-primary-light-1:mix($--color-white,$--color-primary,10%);
 $--color-primary-light-2:mix($--color-white,$--color-primary,20%);
