--- a/packages/theme-chalk/src/button.scss
+++ b/packages/theme-chalk/src/button.scss
@@ -1,5 +1,5 @@
 @charset 'UTF-8';
-@import './common/var.scss';
+@import 'common/var.scss';
 @import 'mixins/_button';
 @import 'mixins/mixins';
 @import 'mixins/utils';
@@ -17,4 +17,76 @@
   color:$--button-default-color;
   text-align: center;
   font-weight: $--button-font-weight;
+  @include utils-user-select(none);
+  & + .el-button{
+    margin-left: 10px;
+  }
+  @include button-size($--button-padding-vertical,$--button-padding-horizontal,$--button-font-size,$--button-border-radius);
+  &:hover,
+  &:focus {
+    color:$--color-primary;
+    border-color: $--color-primary-light-7;
+    background-color: $--color-primary-light-9;
+  }
+  &:active {
+    color: mix($--color-black,$--color-primary,$--button-active-shade-percent);
+    border-color: mix($--color-black,$--color-primary,$--button-active-shade-percent);
+    outline: none;
+  }
+
+  @include when(plain){
+    &:hover,
+    &:focus{
+      color: $--color-primary;
+      border-color:$--color-primary;
+      background: $--color-white;
+    }
+    &:active{
+      background:$--color-white;
+      color:mix($--color-black,$--color-primary,$--button-active-shade-percent);
+      border-color:mix($--color-black,$--color-primary,$--button-active-shade-percent);
+      outline: none;
+    }
+  }
+  @include when(active){
+    color:mix($--color-black,$--color-primary,$--button-active-shade-percent);
+    border-color:mix($--color-black,$--color-primary,$--button-active-shade-percent);
+  }
+  @include when(disabled){
+    &{
+      cursor: not-allowed;
+      color:$--button-disabled-color;
+      background-image:none;
+      border-color:$--button-disabled-fill;
+      border-color:$--button-disabled-border;
+    }
+    &.el-button-text{
+      background-color: transparent;
+    }
+    &.is-plain{
+      color:$--button-disabled-color;
+      background-color: $--color-white;
+      border-color:$--button-disabled-border;
+    }
+  }
+  @include when(round){
+    border-radius: 20px;
+    padding:12px 23px;
+  }
+  @include m(success) {
+    @include button-variant($--button-success-color,$--button-success-fill, $--button-success-border);
+  }
+  @include m(info){
+    @include button-variant($--button-info-color,$--button-info-fill,$--button-info-border);
+  }
+  @include m(danger){
+    @include button-variant($--button-danger-color,$--button-danger-fill,$--button-danger-border);
+  }
+  @include m(warning){
+    @include button-variant($--button-warning-color,$--button-warning-fill,$--button-warning-border);
+  }
+  @include m(primary){
+    @include button-variant($--button-primary-color,$--button-primary-fill,$--button-primary-border);
+  }
+
 }
