--- a/packages/theme-chalk/src/common/var.scss
+++ b/packages/theme-chalk/src/common/var.scss
@@ -131,13 +131,13 @@ $--button-medium-border-radius:$--border-radius-base !default;
 $--button-medium-padding-vertical:10px !default;
 $--button-medium-padding-horizontal:20px !default;
 
-$--button-samll-font-size:12px !default;
-$--button-samll-border-radius:#{$--border-radius-base -1} !default;
-$--button-samll-padding-vertical:9px !default;
-$--button-samll-padding-horizontal:15px !default;
+$--button-small-font-size: 12px !default;
+$--button-small-border-radius: #{$--border-radius-base - 1} !default;
+$--button-small-padding-vertical: 9px !default;
+$--button-small-padding-horizontal: 15px !default;
 
 $--button-mini-font-size:12px !default;
-$--button-mini-border-radius:#{$--border-radius-base -1} !default;
+$--button-mini-border-radius:#{$--border-radius-base - 1}!default;
 $--button-mini-padding-vertical:7px !default;
 $--button-mini-padding-horizontal:15px !default;
 
