--- a/packages/theme-chalk/src/mixins/_button.scss
+++ b/packages/theme-chalk/src/mixins/_button.scss
@@ -31,6 +31,7 @@
   color:$color;
   background-color: $background-color;
   border-color:$border-color;
+  stroke:$color;
   &:hover,
   &:focus{
     background:mix($--color-white,$background-color,$--button-hover-tint-percent);
