--- a/packages/theme-chalk/src/progress.scss
+++ b/packages/theme-chalk/src/progress.scss
@@ -28,22 +28,56 @@
       margin-right:0; 
     }
   }
-
-  @include b(progress-bar){
-    padding-right:50px;
-    display: inline-block;
-    vertical-align: middle;
-    width: 100%;
-    margin-right: -55px;
-    box-sizing: border-box;
-    @include e(outer){
-      height:6px;
-      border-radius: 100px;
-      background-color: $--border-color-lighter;
-      overflow: hidden;
-      position: relative;
-      vertical-align: middle;
+  @include when(success){
+    .el-progress-bar__inner{
+      background-color: $--color-success;
+    }
+    .el-progress__text{
+        color:$--color-success;
+        fill:$--color-success;
     }
   }
-
+  @include when(exception){
+    .el-progress-bar__inner{
+      background-color: $--color-danger;
+    }
+    .el-progress__text{
+      fill:$--color-danger
+    }
+  }
+}
+@include b(progress-bar){
+  padding-right:50px;
+  display: inline-block;
+  vertical-align: middle;
+  width: 100%;
+  margin-right: -55px;
+  box-sizing: border-box;
+  @include e(outer){
+    height:6px;
+    border-radius: 100px;
+    background-color: $--border-color-lighter;
+    overflow: hidden;
+    position: relative;
+    vertical-align: middle;
+  }
+  @include e(inner){
+    position: absolute;
+    left: 0;
+    top:0;
+    height: 100%;
+    background-color: $--color-primary;
+    text-align: right;
+    border-radius: 100px;
+    line-height: 1;
+    white-space: nowrap;
+    @include utils-vertical-center;
+  }
+  @include e(innerText){
+    display: inline-block;
+    vertical-align: middle;
+    color:$--color-white;
+    font-size: 12px;
+    margin: 0 5px;
+  }
 }
